[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
include = ["config.yml"]

[tool.poetry]
name = "SSHScan"
version = "0.1.0"
description = "A tool for scanning SSH servers"
authors = ["evict"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
sshscan = "sshscan:main"